--- a/index.html
+++ b/index.html
@@ -15,16 +15,7 @@
 
     <title>Frontend Mentor | Profile card component</title>
 
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
+    
   </head>
   <body>
     <img
@@ -77,7 +68,7 @@
         >Frontend Mentor
       </a>
       . Coded by
-      <a href="#">Your Name Here</a>.
+      <a href="https://www.frontendmentor.io/profile/amar215">Amar Kosare</a>.
     </div>
   </body>
 </html>
